--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "blackhaven"
 version = "3.0.0"
 description = "BlackHaven - OSINT & Security Auditing Toolkit"
 requires-python = ">=3.9"
-dependencies = ["colorama", "rich", "prompt_toolkit", "bcrypt", "argon2-cffi"]
+dependencies = ["colorama", "rich", "prompt_toolkit", "bcrypt", "argon2-cffi", "requests"]
 
 [project.scripts]
 blackhaven = "blackhaven.main:main"
